--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@hammadxcm/image-magnifier": "^0.4.2",
     "@prisma/client": "^7.3.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
