--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hammadxcm/image-magnifier": "^0.4.2",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^5.11.0",
+    "@tanstack/react-query": "^5.90.20",
     "bcryptjs": "^3.0.3",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
