--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^3.0.3",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
+    "moment": "^2.30.1",
     "mongodb": "^7.0.0",
     "next": "16.1.4",
     "next-auth": "^5.0.0-beta.30",
